
<!--
  ~ Copyright 2015 - Quattroid 1.0
  ~
  ~ Creado por A. Herrero en Enero de 2015
  ~ http://sites.google.com/site/qtroid
  ~ acumulador.admin@gmail.com
  ~
  ~ Este programa es software libre; usted puede redistruirlo y/o modificarlo bajo los términos
  ~ de la Licencia Pública General GNU, tal y como está publicada por la Free Software Foundation;
  ~ ya sea la versión 2 de la Licencia, o (a su elección) cualquier versión posterior.
  ~
  ~ Este programa se distribuye con la intención de ser útil, pero SIN NINGUNA GARANTÍA;
  ~ incluso sin la garantía implícita de USABILIDAD O UTILIDAD PARA UN FIN PARTICULAR.
  ~ Vea la Licencia Pública General GNU en "assets/Licencia" para más detalles.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:background="#000000">

    <LinearLayout
        style="@style/vertical"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:onClick="tituloPulsado"
        android:gravity="center_horizontal">

    <!-- TITULO -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:src="@drawable/bus"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffdcdcdc"
        android:textStyle="bold"
        android:text="@string/nombreAplicacion"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffdcdcdc"
        android:textStyle="bold"
        android:text="@string/creditoPrincipal"/>

    </LinearLayout>

    <!-- CALENDARIO -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp"
        android:clickable="true"
        android:longClickable="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bt_calendario"
        android:onClick="BotonPulsado"
        android:id="@+id/bt_calendario">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:adjustViewBounds="true"
            android:src="@drawable/calendario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bt_calendario"
            android:paddingLeft="25dp"/>

    </LinearLayout>

    <!-- RELEVOS -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp"
        android:clickable="true"
        android:longClickable="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bt_relevos"
        android:onClick="BotonPulsado"
        android:id="@+id/bt_relevos">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:adjustViewBounds="true"
            android:src="@drawable/usuario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bt_relevos"
            android:paddingLeft="25dp"/>
    </LinearLayout>

    <!-- SERVICIOS -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp"
        android:clickable="true"
        android:longClickable="true"
        android:background="@drawable/bt_servicios"
        android:layout_marginBottom="10dp"
        android:onClick="BotonPulsado"
        android:id="@+id/bt_servicios">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:adjustViewBounds="true"
            android:src="@drawable/servicios"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bt_servicios"
            android:paddingLeft="25dp"/>
    </LinearLayout>

    <!-- HORAS AJENAS -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp"
        android:clickable="true"
        android:longClickable="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bt_ajenas"
        android:onClick="BotonPulsado"
        android:id="@+id/bt_ajenas">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ajenas"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bt_ajenas"
            android:paddingLeft="25dp"/>
    </LinearLayout>

    <!-- HERRAMIENTAS -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp"
        android:clickable="true"
        android:longClickable="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bt_ajustes"
        android:onClick="BotonPulsado"
        android:id="@+id/bt_herramientas">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:adjustViewBounds="true"
            android:src="@drawable/herramientas"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bt_herramientas"
            android:paddingLeft="25dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_actualizando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#ffdcdcdc"
        android:text="Actualizando..."/>


</LinearLayout>
</ScrollView>